syntax = "proto2";

package member;

service Member {
  rpc AddMember(AddMemberRequest) returns (MemberReply) {}
  rpc DisableMember(IdRequest) returns (ProcessStatusReply) {}
  rpc UpdateMember(UpdateMemberRequest) returns (ProcessStatusReply) {}
  rpc GetMembers(ListRequest) returns (MemberListReply) {}
  rpc GetMemberByUserId(IdRequest) returns (MemberReply) {}
}

message IdRequest {
  required string id = 1;
}

message AddMemberRequest {
  required string userId = 1;
  required string userName = 2;
}

message UpdateMemberRequest {
  required string userId = 1;
  required string memberType = 2;
  required int32 level = 3;
  required bool active = 4;
  required string description = 5;
}

message ListRequest {
  required uint64 page = 1;
  required uint64 perPage = 2;
  optional string status = 3;
  optional string memberType = 4;
  optional int32 level = 5;
}

message ProcessStatusReply {
  required string code = 1;
  required string message = 2;
  required bool success = 3;
  required string processId = 4;
}

message MemberReply {
  required string code = 1;
  required string message = 2;
  optional MemberInfo data = 3;
}

message MemberInfo {
  required string userId = 1;
  required string userName = 2;
  required string status = 3;
  required string memberType = 4;
  required int32 creditScore = 5;
  required uint64 point = 6;
  required int32 level = 7;
  required bool active = 8;
  required string description = 9;
  required string createdAt = 10;
}

message MemberListReply {
  required string code = 1;
  required string message = 2;
  repeated MemberInfo data = 3;
  required uint64 numPages = 4;
}
