syntax = "proto3";

option java_multiple_files = true;
option java_package = "profile";
option java_outer_classname = "ProfileProto";
option objc_class_prefix = "HLW";

package profile;

import "google/protobuf/wrappers.proto";
import "utils.proto";

service ProfileServer {
  rpc getUser (utils.UUID) returns (ProfileReply) {}
  rpc update (ProfileRequest) returns (ProfileReply) {}
  rpc changePassword (PasswordChangeRequest) returns (google.protobuf.BoolValue) {}
}

message ProfileRequest {
  utils.UUID id = 1;
  string nickname = 2;
  optional string gender = 3; // enum Gender
  optional string birth = 4;
  optional string gravatar = 5;
}

message PasswordChangeRequest {
  utils.UUID id = 1;
  string oldPassword = 2;
  string newPassword = 3;
  string confirm = 4;
}

//enum Gender {
//  Male = 0;
//  Female = 1;
//}

message ProfileReply {
  string code = 1;
  optional string message = 2;
  optional UserProfile data = 3;
}

message UserProfile {
  string name = 1;
  string nickname = 2;
  optional string gender = 3; // enum Gender
  optional string birth = 4;
  string gravatar = 5;
}
